# python-greeninvoice-client

./: .gitignore  pyproject.toml  structure.py
entities/account/: reset.json  token.json
entities/businesses/: footer.json  update.json  upload.json
entities/businesses/numbering/: get.json
entities/clients/: add.json  search.json
entities/documents/: add.json  info.json  payments.json  preview.json
entities/documents/id/: download_links.json  get.json  linked.json
entities/expenses/: file.json
entities/expenses/id/: delete.json
entities/items/id/: delete.json
entities/suppliers/id/: get.json  update.json
src/giclient/: authentication.py  client.py  event_hooks.py  manager.py  transport.py
tests/: conftest.py  test_auth.py  test_core_entities.py  test_live_api.py
