[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-greeninvoice-client"
readme = "README.md"
license = {file = "LICENSE"}
version = "0.1.4"
requires-python = ">= 3.12"
authors = [ { name = "UniProBI" } ]
maintainers = [ { email = "uriah372@gmail.com" } ]
keywords = ["morning", "greeninvoice", "green", "invoice", "python", "api", "client"]
urls = { Repository = "https://github.com/UniProBI/python-greeninvoice-client.git", Issues = "https://github.com/UniProBI/python-greeninvoice-client/issues" }
dependencies = [
    "aiolimiter>=1.2.1",
    "httpx>=0.28.1",
    "yarl>=1.23.0",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

# [tool.setuptools.packages.find]
# where = ["."]
# include = ["giclient*"]
